Code/project-1-to-6-code/k8s/istio/virtualservice-login.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: login-service
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - ext-host-gwy
  http:
    - match:
        - uri:
            prefix: /v1/logintoken
      rewrite:
        uri: /api/token/
      route:
        - destination:
            host: loginservice
            port:
              number: 80
